test/types/type_variables/deitz/test_clone_class1b.good
Error: Cannot assign expression of type float to field of type int (test_clone_class1b.chpl:2)
